--- a/sgx-nacl/SConstruct
+++ b/sgx-nacl/SConstruct
@@ -35,6 +35,7 @@ gc.disable()
 # REPORT
 CMD_COUNTER = {}
 ENV_COUNTER = {}
+
 def PrintFinalReport():
   """This function is run just before scons exits and dumps various reports.
   """
@@ -306,6 +307,10 @@ def SetUpArgumentBits(env):
   BitFromArgument(env, 'werror', default=True,
     desc='Treat warnings as errors (-Werror)')
 
+  # mkpark: sgx related 
+  BitFromArgument(env, 'sgx_debug', default=True,
+    desc='Set SGX_DEBUG=1 (Default) or 0')
+
   BitFromArgument(env, 'disable_nosys_linker_warnings', default=False,
     desc='Disable warning mechanism in src/untrusted/nosys/warning.h')
 
@@ -346,7 +351,7 @@ def SetUpArgumentBits(env):
       'nonsfi_loader instead of sel_ldr, and it tells the PNaCl toolchain '
       'to translate pexes to Non-SFI nexes.')
 
-  BitFromArgument(env, 'use_newlib_nonsfi_loader', default=True,
+  BitFromArgument(env, 'use_newlib_nonsfi_loader', default=False,
     desc='Test nonsfi_loader linked against NaCl newlib instead of the one '
       'linked against host libc. This flag makes sense only with '
       'nonsfi_nacl=1.')
@@ -358,13 +363,6 @@ def SetUpArgumentBits(env):
       'and we do not open a browser window on the user\'s desktop.  '
       'Unfortunately there is no equivalent on Mac OS X.')
 
-  BitFromArgument(env, 'disable_crash_dialog', default=True,
-    desc='Disable Windows\' crash dialog box, which Windows pops up when a '
-      'process exits with an unhandled fault.  Windows enables this by '
-      'default for processes launched from the command line or from the '
-      'GUI.  Our default is to disable it, because the dialog turns crashes '
-      'into hangs on Buildbot, and our test suite includes various crash '
-      'tests.')
 
   BitFromArgument(env, 'do_not_run_tests', default=False,
     desc='Prevents tests from running.  This lets SCons build the files needed '
@@ -434,13 +432,16 @@ def GetTargetPlatform():
 def GetBuildPlatform():
   return pynacl.platform.GetArch3264()
 
-
+# mkpark start here?
 environment_list = []
 
 # Base environment for both nacl and non-nacl variants.
 kwargs = {}
 if ARGUMENTS.get('DESTINATION_ROOT') is not None:
   kwargs['DESTINATION_ROOT'] = ARGUMENTS.get('DESTINATION_ROOT')
+
+
+# mkpark: pre_base_env init
 pre_base_env = Environment(
     # Use the environment that scons was run in to run scons invoked commands.
     # This allows in things like externally provided PATH, PYTHONPATH.
@@ -515,26 +516,8 @@ SetUpArgumentBits(pre_base_env)
 # bits that get declared in SetUpArgumentBits
 atexit.register(PrintFinalReport)
 
-def DisableCrashDialog():
-  if sys.platform == 'win32':
-    import win32api
-    import win32con
-    # The double call is to preserve existing flags, as discussed at
-    # http://blogs.msdn.com/oldnewthing/archive/2004/07/27/198410.aspx
-    new_flags = win32con.SEM_NOGPFAULTERRORBOX
-    existing_flags = win32api.SetErrorMode(new_flags)
-    win32api.SetErrorMode(existing_flags | new_flags)
-
-if pre_base_env.Bit('disable_crash_dialog'):
-  DisableCrashDialog()
-
-# We want to pull CYGWIN setup in our environment or at least set flag
-# nodosfilewarning. It does not do anything when CYGWIN is not involved
-# so let's do it in all cases.
-pre_base_env['ENV']['CYGWIN'] = os.environ.get('CYGWIN', 'nodosfilewarning')
-
 # Note: QEMU_PREFIX_HOOK may influence test runs and sb translator invocations
-pre_base_env['ENV']['QEMU_PREFIX_HOOK'] = os.environ.get('QEMU_PREFIX_HOOK', '')
+# pre_base_env['ENV']['QEMU_PREFIX_HOOK'] = os.environ.get('QEMU_PREFIX_HOOK', '')
 
 # Allow the zero-based sandbox model to run insecurely.
 # TODO(arbenson): remove this once binutils bug is fixed (see
