--- a/sgx-nacl/tests/ifc/confil/src/Makefile
+++ b/sgx-nacl/tests/ifc/confil/src/Makefile
@@ -1,3 +1,8 @@
+/*
+ * Copyright (c) 2020 The SandboxTEE Authors. All rights reserved.
+ * Use of this source code is governed by a GPLv2 license that can be
+ * found in the LICENSE file.
+*/
 
 all: client.o ad_network.o
 	gcc -o client client.c
