--- a/sgx-nacl/SConstruct
+++ b/sgx-nacl/SConstruct
@@ -2294,11 +2294,11 @@ def MakeSGXEnv():
   
   sgx_env.Append(BUILD_SCONSCRIPTS = [
       # KEEP THIS SORTED PLEASE
-      'build/package_version/build.scons',
+      #'build/package_version/build.scons',
       'src/shared/gio/build.scons',
-      'src/shared/imc/build.scons',
+      #'src/shared/imc/build.scons',
       'src/shared/platform/build.scons',
-      'src/third_party/gtest/build.scons',
+      #'src/third_party/gtest/build.scons',
       'src/trusted/cpu_features/build.scons',
       'src/trusted/debug_stub/build.scons',
       'src/trusted/desc/build.scons',
@@ -2306,12 +2306,13 @@ def MakeSGXEnv():
       'src/trusted/interval_multiset/build.scons',
       'src/trusted/nacl_base/build.scons',
       'src/trusted/perf_counter/build.scons',
-      'src/trusted/platform_qualify/build.scons', # I think it isn't needed in SGX
+      #'src/trusted/platform_qualify/build.scons', # I think it isn't needed in SGX
       'src/trusted/validator/build.scons', # I think it is for test
       'src/trusted/validator/driver/build.scons',
       'src/trusted/validator_ragel/build.scons',
       'src/trusted/validator_x86/build.scons',
       'src/trusted/service_runtime/build.scons',
+      # TODO: uncomment other files & add test files
   ])
 
 
