--- a/sgx-nacl/SConstruct
+++ b/sgx-nacl/SConstruct
@@ -2318,6 +2318,21 @@ def MakeSGXEnv():
       # TODO: uncomment other files & add test files
   ])
 
+  sgx_env.AddMethod(SDKInstallBin)
+  sgx_env.Replace(
+      NACL_BUILD_FAMILY = 'SGX',
+  )
+
+
+  # Add optional scons files if present in the directory tree.
+  if os.path.exists(pre_base_env.subst('${MAIN_DIR}/supplement/build.scons')):
+    sgx_env.Append(BUILD_SCONSCRIPTS=['${MAIN_DIR}/supplement/build.scons'])
+
+  # MakeBaseTrustedEnv end
+ 
+  ## MakeUnixLikeEnv start
+  
+
 
 
 
