--- a/sgx-nacl/SConstruct
+++ b/sgx-nacl/SConstruct
@@ -2400,6 +2400,64 @@ def MakeSGXEnv():
         ]
     )
 
+  # LINK FLAGS
+  # '$LINK -o $TARGET $LINKFLAGS $SOURCES $_LIBDIRFLAGS $_LIBFLAGS $_LIBGROUP'
+  # '$SHLINK -o $TARGET $SHLINKFLAGS $SOURCES $_LIBDIRFLAGS $_LIBFLAGS  // $_LIBGROUP'
+  sgx_env['LINKCOM'] = sgx_env.get('LINKCOM') + ' $_LIBGROUP' 
+  sgx_env['SHLINKCOM'] = sgx_env.get('SHLINKCOM') + ' $_LIBGROUP'
+
+  #sgx_env.Replace(_LIBGROUP=['-L/opt/intel/sgxsdk/lib64/', 
+  #    '-Wl,--whole-archive', '-lsgx_trts', '-Wl,--no-whole-archive', 
+  #    '-Wl,--start-group', '-lsgx_tstdc', '-lsgx_tcxx', '-lsgx_tservice', '-lsgx_tcrypto', '-Wl,--end-group'])
+
+  sgx_link_flags = ['-Wl,--no-undefined', '-nostdlib', '-nodefaultlibs', '-nostartfiles', 
+          #'-Wl,-Bstatic', # finds .a libraries
+          '-Wl,-Bsymbolic', 
+          '-Wl,--export-dynamic', 
+          '-Wl,--defsym,__ImageBase=0', 
+          '-Wl,--gc-sections',
+          ]
+
+  #sgx_common_flags += ['-Wall','-Wextra','-Winit-self',
+  #      '-Wpointer-arith', '-Wreturn-type', '-Waddress', '-Wsequence-point',
+  #      '-Wformat-security', '-Wmissing-include-dirs', '-Wfloat-equal', '-Wundef',
+  #      '-Wshadow','-Wcast-align', '-Wconversion', '-Wredundant-decls']
+
+  sgx_env.Prepend(
+    LINKFLAGS=[
+        sgx_link_flags]
+    # NOTE: pthread is only neeeded for libppNaClPlugin.so and on arm
+    # It may occur error
+    #LIBS = ['pthread'],
+    #CPPDEFINES = [['__STDC_LIMIT_MACROS', '1'],
+    #              ['__STDC_FORMAT_MACROS', '1'],
+    #              ],
+  )
+  # This breaks basically all C++ code that uses stlport.
+  # sgx_env.Prepend(CXXFLAGS=['-std=c++98'])
+  #sgx_env.Append(LIBPATH='-L/opt/intel/sgxsdk/lib64/')
+  # sgx_env.Append(_LIBFLAGS = [
+  #     '-Lsrc/trusted/sgxlib/', '-lwolfssl.sgx.static.lib',])
+
+  if sgx_env.Bit('build_x86_32'):
+    sgx_env.Prepend(
+        CCFLAGS = ['-m32'],
+        LINKFLAGS = ['-m32'],
+        )
+
+  # MakeUnixLikeEnv end 
+  
+  # MakeTrustedLinuxEnv start
+  # Prepend so we can disable warnings via Append
+  sgx_env.Prepend( # TODO check
+      CPPDEFINES = [['_POSIX_C_SOURCE', '199506'],
+                    ['_XOPEN_SOURCE', '600'],
+                    ['_GNU_SOURCE', '1'],
+                    ['_LARGEFILE64_SOURCE', '1'],
+                    ],
+      LIBS = ['rt'],
+      )
+
 
 
 
