--- a/sgx-nacl/SConstruct
+++ b/sgx-nacl/SConstruct
@@ -2560,7 +2560,7 @@ pre_base_env.Append(
 # NOTE: this loads stuff from: site_scons/site_tools/naclsdk.py
 nacl_env = MakeArchSpecificEnv()
 # See comment below about libc++ and libpthread in NONIRT_LIBS.
-using_nacl_libcxx = nacl_env.Bit('bitcode') or nacl_env.Bit('nacl_clang')
+using_nacl_libcxx = nacl_env.Bit('bitcode') or nacl_env.Bit('nacl_clang') or sgx_env.Bit('sgx')
 nacl_env = nacl_env.Clone(
     tools = ['naclsdk'],
     NACL_BUILD_FAMILY = 'UNTRUSTED',
@@ -2626,6 +2626,7 @@ nacl_env = nacl_env.Clone(
     # TODO(dschuff): Also remove the hack in pnacl-ld and use this for pnacl.
     NONIRT_LIBS = (['nacl_sys_private'] +
                    (['c++','pthread_private'] if using_nacl_libcxx else [])),
+    IFC_LIBS = ['ifc'],
     PTHREAD_LIBS = ['pthread_private'],
     DYNCODE_LIBS = ['nacl_dyncode_private'],
     EXCEPTION_LIBS = ['nacl_exception_private'],
@@ -2636,17 +2637,10 @@ nacl_env = nacl_env.Clone(
 def UsesAbiNote(env):
   """Return True if using a new-style GCC with .note.NaCl.ABI.* notes.
 This means there will always be an RODATA segment, even if just for the note."""
-  return env.Bit('build_arm') and not env.Bit('bitcode')
+  return (False) and not env.Bit('bitcode')
 
 nacl_env.AddMethod(UsesAbiNote)
 
-def UnderWindowsCoverage(env):
-  """Return True if using running on coverage under windows."""
-  if 'TRUSTED_ENV' not in env:
-    return False
-  return env['TRUSTED_ENV'].Bit('coverage_enabled') and env.Bit('host_windows')
-
-nacl_env.AddMethod(UnderWindowsCoverage)
 
 def SetNonStableBitcodeIfAllowed(env, allow_sb_translator=False):
   """ This modifies the environment to allow features that aren't part
@@ -2699,9 +2693,6 @@ def AllowInlineAssembly(env):
       env.AppendUnique(CCFLAGS=['--target=i686-unknown-nacl'])
     elif env.Bit('build_x86_64'):
       env.AppendUnique(CCFLAGS=['--target=x86_64-unknown-nacl'])
-    elif env.Bit('build_arm'):
-      env.AppendUnique(CCFLAGS=['--target=armv7a-unknown-nacl-gnueabihf',
-                                '-mfloat-abi=hard'])
     # Enable the use of inline assembly.
     env.Append(CCFLAGS=['-fgnu-inline-asm'])
   return True
@@ -2781,14 +2772,6 @@ nacl_env.Append(
         ],
     )
 
-def FixWindowsAssembler(env):
-  if env.Bit('host_windows'):
-    # ASCOM is the rule used by .s files and ASPPCOM is the rule used by .S
-    # files; the latter uses the C preprocessor.  This is needed because Windows
-    # builds are case-insensitive, so they all appear as .s files.
-    env.Replace(ASCOM='${ASPPCOM}')
-
-FixWindowsAssembler(nacl_env)
 
 # Look in the local include and lib directories before the toolchain's.
 nacl_env['INCLUDE_DIR'] = '${TARGET_ROOT}/include'
@@ -2800,30 +2783,6 @@ nacl_env.PrependUnique(
     LIBPATH = ['${LIB_DIR}'],
     )
 
-if nacl_env.Bit('bitcode'):
-  # passing -O when linking requests LTO, which does additional global
-  # optimizations at link time
-  nacl_env.Append(LINKFLAGS=['-O3'])
-  if not nacl_env.Bit('nacl_glibc'):
-    nacl_env.Append(LINKFLAGS=['-static'])
-
-  if nacl_env.Bit('translate_fast'):
-    nacl_env.Append(LINKFLAGS=['-Xlinker', '-translate-fast'])
-    nacl_env.Append(TRANSLATEFLAGS=['-translate-fast'])
-  if nacl_env.Bit('use_sz'):
-    nacl_env.Append(TRANSLATEFLAGS=['--use-sz'])
-
-  # With pnacl's clang base/ code uses the "override" keyword.
-  nacl_env.Append(CXXFLAGS=['-Wno-c++11-extensions'])
-  # Allow extraneous semicolons.  (Until these are removed.)
-  # http://code.google.com/p/nativeclient/issues/detail?id=2861
-  nacl_env.Append(CCFLAGS=['-Wno-extra-semi'])
-  # Allow unused private fields.  (Until these are removed.)
-  # http://code.google.com/p/nativeclient/issues/detail?id=2861
-  nacl_env.Append(CCFLAGS=['-Wno-unused-private-field'])
-  # native_client/src/nonsfi/linux/linux_syscall_structs.h uses designated
-  # initializers, which causes a warning when included from c++98 code.
-  nacl_env.Append(CXXFLAGS=['-Wno-c99-extensions'])
 
 if nacl_env.Bit('nacl_clang'):
   # third_party/valgrind/nacl_valgrind.h uses asm instead of __asm__
@@ -2831,6 +2790,7 @@ if nacl_env.Bit('nacl_clang'):
   # TODO(dschuff): change it to __asm__ and remove this suppression.
   nacl_env.Append(CCFLAGS=['-Wno-language-extension-token'])
 
+## mkpark nacl_irt_env
 # We use a special environment for building the IRT image because it must
 # always use the newlib toolchain, regardless of --nacl_glibc.  We clone
 # it from nacl_env here, before too much other cruft has been added.
@@ -2864,9 +2824,6 @@ target_variant_map = [
 for variant_bit, variant_suffix in target_variant_map:
   if nacl_env.Bit(variant_bit):
     nacl_env['TARGET_VARIANT'] += '-' + variant_suffix
-
-if nacl_env.Bit('bitcode'):
-  nacl_env['TARGET_VARIANT'] += '-clang'
 
 nacl_env.Replace(TESTRUNNER_LIBS=['testrunner'])
 
