--- a/sgx-nacl/SConstruct
+++ b/sgx-nacl/SConstruct
@@ -2246,6 +2246,17 @@ def MakeUntrustedSGXEnv(platform=None):
       LINK = '$CXX',
   )
 
+  # Prepend so we can disable warnings via Append
+  usgx_env.Prepend(
+      CPPDEFINES = [['_POSIX_C_SOURCE', '199506'],
+                    ['_XOPEN_SOURCE', '600'],
+                    ['_GNU_SOURCE', '1'],
+                    ['_LARGEFILE64_SOURCE', '1'],
+                    ],
+      LIBS = ['rt'],
+      )
+
+
 
 # Specializes a generic Linux development environment to be a trusted
 # environment.
